--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "servemon": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,12 @@
   },
   "homepage": "https://github.com/Jamarin/telegram-bot-test#readme",
   "dependencies": {
+    "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "telegraf": "^4.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.13",
+    "util": "^0.12.4"
   }
 }
