--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
-    "telegraf": "^4.4.2"
+    "telegraf": "^4.4.2",
+    "telegraf-calendar-telegram": "^1.5.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.13",
