Add start command package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "servemon": "nodemon index.js"
+    "servemon": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
