--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
+    "node-schedule": "^2.1.0",
     "telegraf": "^4.4.2",
     "telegraf-calendar-telegram": "^1.5.8"
   },
