--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Jamarin/telegram-bot-test#readme",
   "dependencies": {
+    "amqplib": "^0.8.0",
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "node-schedule": "^2.1.0",
