--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "node-schedule": "^2.1.0",
+    "pubnub": "^5.0.1",
     "telegraf": "^4.4.2",
     "telegraf-calendar-telegram": "^1.5.8"
   },
